--- a/tauscher/.gitignore
+++ b/tauscher/.gitignore
@@ -1,4 +1,8 @@
 # git ignore
 ## ignore files that are not needed to be tracked by git
-livesessions.py
-*.stats
+
+tauscher/livesessions.py
+tauscher/*.stats
+
+**/livesessions.py
+**/*.stats
